--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap");
-
 :root {
-  --text-primary: #000;
-  --bgPrimary: #fff;
-  --bgSecondary: #f9f9f9;
-  --pink: #0071bd;
-  --light-blue: #e6f7ff;
-  --border: #d9d9d9;
+  --theme: #2d3436;
+  --bgPrimary: #f1f2f6;
+  --bgSecondary: #ffffff;
+  --text-primary: #222f3e;
+  --pink: #5352ed;
+  --light-blue: #70a1ff;
+  --border: #2f3542;
 }
 
 body {
-  width: 100vw;
-  height: 100%;
-  overflow-x: hidden;
-  background-color: var(--bgPrimary) !important;
+  background-color: var(--bgSecondary);
 }
-html {
-  font-family: "Josefin Sans", sans-serif !important;
-  font-size: 16px;
+.ant-layout {
+  background-color: transparent;
 }
 * {
   margin: 0;
@@ -28,33 +23,30 @@ html {
 a:hover {
   color: var(--pink) !important;
 }
-a {
-  color: var(--light-blue);
-  text-decoration: none;
+a.active {
+  color: var(--light-blue) !important;
 }
-a .app {
-  display: flex;
-  overflow: hidden;
-  color: var(--light-blue);
+.ant-menu-item-selected {
+  background-color: transparent !important;
 }
 
 .app {
   display: flex;
+  overflow-x: hidden;
 }
+
 .navbar {
   flex: 0.2;
-  background-color: rgb(0, 21, 41);
+  background-color: var(--theme);
 }
 
 .main {
   flex: 0.8;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-.routes {
-  padding: 10px;
 }
 
 .nav-container {
@@ -63,21 +55,29 @@ a .app {
   margin: 10px;
   height: 100vh;
   margin: 0px;
-  background-color: rgb(0, 21, 41);
+  background-color: var(--theme);
 }
-
+.menu-provider {
+  background-color: var(--theme);
+  font-size: 1.2rem;
+  font-weight: 600;
+}
 .logo-container {
-  background-color: #001529;
+  background-color: var(--theme);
   display: flex;
   padding: 20px;
   align-items: center;
   width: 100%;
+  gap: 0.5rem;
 }
 .logo {
   margin: 0 0 0 15px;
 }
 .logo a {
-  color: white;
+  color: var(--bgPrimary);
+}
+.logo-container h2 {
+  margin: 0;
 }
 .menu-control-container {
   display: none !important;
@@ -97,19 +97,19 @@ a .app {
 }
 
 @media screen and (max-width: 1300px) {
-  .routes {
+  .main {
     margin-left: 50px;
   }
 }
 
 @media screen and (max-width: 1170px) {
-  .routes {
+  .main {
     margin-left: 50px;
   }
 }
 
 @media screen and (max-width: 1000px) {
-  .routes {
+  .main {
     margin-left: 100px;
   }
 }
@@ -124,9 +124,9 @@ a .app {
     flex: 1;
   }
 
-  .routes {
+  .main {
     flex: 1;
-    margin-top: 90px;
+    margin-top: 15vh;
     margin-left: 0px;
     margin-right: 10px;
   }
@@ -175,7 +175,7 @@ a .app {
   color: var(--pink);
 }
 
-.coin-heading-container p {
+.coin-heading-cohntainer p {
   font-size: 1rem;
   opacity: 0.9;
   margin-bottom: 20px;
@@ -328,7 +328,7 @@ a .app {
   height: 100px;
 }
 .news-card p {
-  color: black;
+  color: var(--text-primary);
   margin: 10px 0px !important;
 }
 .provider-container {
@@ -343,10 +343,10 @@ a .app {
   display: flex;
   justify-content: space-between;
   gap: 50px;
-  color: #0071bd;
+  color: var(--pink);
 }
 .chart-title {
-  color: #0071bd !important;
+  color: var(--pink) !important;
 }
 .price-container {
   display: flex !important;
@@ -379,6 +379,7 @@ a .app {
 }
 .crypto-card-container {
   min-height: 65vh !important;
+  padding: 0.5rem 1rem;
 }
 .crypto-card {
   min-width: 250px;
@@ -392,10 +393,32 @@ a .app {
 }
 
 .footer {
-  width: 100%;
-  background-color: #001529;
+  background-color: var(--theme);
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 10px;
   align-items: center;
+}
+.footer a {
+  color: var(--light-blue);
+}
+.home-provider {
+  min-height: 85vh;
+  padding: 1rem;
+}
+.home-provider a {
+  color: var(--light-blue);
+}
+.time-table {
+  display: inline-block;
+  float: right;
+}
+.time-table span {
+  font-size: 1.2rem;
+  color: var(--text-primary);
+}
+@media screen and (max-width: 680px) {
+  .time-table {
+    display: none;
+  }
 }
